<resources>
    <string name="app_name">PhotoTK</string>
    <string name="title_activity_maps">Map</string>
    <string name="open_document_of_image">Open Document of Image</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="facebook_app_id">532515100894053</string>
    <string name="fb_login_protocol_scheme">fb532515100894053</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="ic_home">Home</string>
    <string name="ic_weather">Weather</string>
    <string name="ic_calculator">Calculator</string>
    <string name="ic_celestial">Celestial</string>
    <string name="ic_exif">Exif</string>
    <string name="ic_login">Login</string>
    <string name="ic_management">Management</string>
    <string name="ic_map">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
