<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/ic_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/ic_home"
        />
        <item
            android:id="@+id/ic_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/ic_map"
            />
        <item
            android:id="@+id/ic_exif"
            android:icon="@drawable/ic_menu_exif"
            android:title="@string/ic_exif"
            />
        <item
            android:id="@+id/ic_celestial"
            android:icon="@drawable/ic_menu_celestial"
            android:title="@string/ic_celestial"
            />

    </group>



</menu>