<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/ic_calculator"
            android:icon="@drawable/ic_menu_calculator"
            android:title="@string/ic_calculator"
            />
        <item
            android:id="@+id/ic_weather"
            android:icon="@drawable/ic_menu_weather"
            android:title="@string/ic_weather"
            />
        <item
            android:id="@+id/ic_management"
            android:icon="@drawable/ic_menu_management"
            android:title="@string/ic_management"
            />
        <item
            android:id="@+id/ic_login"
            android:icon="@drawable/ic_menu_login"
            android:title="@string/ic_login"
            />

    </group>



</menu>